login page placeholder chage

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -39,12 +39,12 @@
 
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                    <input type="email" id="loginName" class="form-control" formControlName="username" placeholder="username" />
+                    <input type="email" id="loginName" class="form-control" formControlName="username" placeholder="admin" />
                 </div>
 
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                    <input type="password"  class="form-control" formControlName="password"  placeholder="password"/>
+                    <input type="password"  class="form-control" formControlName="password"  placeholder="asd"/>
                 
                 </div>
 
